Fix vertical alignment of 'Mark all as read' button

--- a/modules/ooui/styles/mw.echo.ui.NotificationBadgeWidget.less
+++ b/modules/ooui/styles/mw.echo.ui.NotificationBadgeWidget.less
@@ -79,7 +79,7 @@
 		}
 
 		.mw-echo-ui-notificationsWidget-markAllReadButton {
-			margin: 1em;
+			margin: 1.25em 1em;
 		}
 	}
 }
